Testing C++17 structured bindings
https://github.com/bibledit/cloud/issues/719

--- a/Makefile.am
+++ b/Makefile.am
@@ -585,7 +585,8 @@ unittest_SOURCES = \
   unittests/gbs.cpp \
   unittests/bibleimages.cpp \
   unittests/image.cpp \
-  unittests/easyenglishbible.cpp
+  unittests/easyenglishbible.cpp \
+  unittests/c++17.cpp
 
 unittest_LDADD = libbibledit.a
 
