--- a/Makefile.in
+++ b/Makefile.in
@@ -89,6 +89,7 @@ PRE_UNINSTALL = :
 POST_UNINSTALL = :
 build_triplet = @build@
 bin_PROGRAMS = server$(EXEEXT) unittest$(EXEEXT) generate$(EXEEXT)
+@COMPILERGCC_TRUE@am__append_1 = -Wcatch-value=2 -Wconditionally-supported
 subdir = .
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/configure.ac
@@ -1572,7 +1573,11 @@ generate_SOURCES = \
 
 generate_LDADD = libbibledit.a
 AM_CFLAGS = -Wall -Wextra -pedantic -g $(OPENSSL_CFLAGS)
+GCC_CXXFLAGS = -Wcatch-value=2 -Wconditionally-supported
+CLANG_CXXFLAGS = ""
+UNKNOWN_CXXFLAGS = ""
 AM_CXXFLAGS = -Wall -Wextra -pedantic -fno-var-tracking -g -Wshadow \
+	-Warray-bounds -Wcast-align -Wcast-qual $(am__append_1) \
 	$(CURL_CFLAGS) $(OPENSSL_CFLAGS) $(GTK_CFLAGS) \
 	$(WEBKIT2GTK_CFLAGS) $(ICU_CFLAGS) $(XML2_CFLAGS)
 
