--- a/Makefile.in
+++ b/Makefile.in
@@ -1576,10 +1576,11 @@ AM_CFLAGS = -Wall -Wextra -pedantic -g $(OPENSSL_CFLAGS)
 GCC_CXXFLAGS = -Wcatch-value=2 -Wconditionally-supported
 CLANG_CXXFLAGS = ""
 UNKNOWN_CXXFLAGS = ""
-AM_CXXFLAGS = -Wall -Wextra -pedantic -fno-var-tracking -g -Wshadow \
-	-Warray-bounds -Wcast-align -Wcast-qual $(am__append_1) \
-	$(CURL_CFLAGS) $(OPENSSL_CFLAGS) $(GTK_CFLAGS) \
-	$(WEBKIT2GTK_CFLAGS) $(ICU_CFLAGS) $(XML2_CFLAGS)
+AM_CXXFLAGS = -Wall -Wextra -pedantic -fno-var-tracking -g \
+	-Wno-unknown-pragmas -Wshadow -Warray-bounds -Wcast-align \
+	-Wcast-qual $(am__append_1) $(CURL_CFLAGS) $(OPENSSL_CFLAGS) \
+	$(GTK_CFLAGS) $(WEBKIT2GTK_CFLAGS) $(ICU_CFLAGS) \
+	$(XML2_CFLAGS)
 
 # The core library compiles and embeds the mbedtls library.
 # On Debian this gives a lintian error:
