--- a/Makefile.am
+++ b/Makefile.am
@@ -587,14 +587,14 @@ generate_SOURCES = \
 
 generate_LDADD = libbibledit.a
 
-AM_CFLAGS = -Wall -Wextra -pedantic -g
+AM_CFLAGS = -Wall -Wno-unknown-pragmas -Wextra -pedantic -g
 AM_CFLAGS += $(OPENSSL_CFLAGS)
 
 GCC_CXXFLAGS = -Wcatch-value=2 -Wconditionally-supported
 CLANG_CXXFLAGS = ""
 UNKNOWN_CXXFLAGS = ""
 
-AM_CXXFLAGS = -Wall -Wextra -pedantic -fno-var-tracking -g -Wno-unknown-pragmas -Wshadow -Warray-bounds -Wcast-align -Wcast-qual
+AM_CXXFLAGS = -Wall -Wno-unknown-pragmas -Wextra -pedantic -fno-var-tracking -g -Wshadow -Warray-bounds -Wcast-align -Wcast-qual
 if COMPILERGCC
 AM_CXXFLAGS += -Wcatch-value=2 -Wconditionally-supported
 endif
