--- a/Makefile.in
+++ b/Makefile.in
@@ -1572,12 +1572,13 @@ generate_SOURCES = \
 	sources/styles.cpp
 
 generate_LDADD = libbibledit.a
-AM_CFLAGS = -Wall -Wextra -pedantic -g $(OPENSSL_CFLAGS)
+AM_CFLAGS = -Wall -Wno-unknown-pragmas -Wextra -pedantic -g \
+	$(OPENSSL_CFLAGS)
 GCC_CXXFLAGS = -Wcatch-value=2 -Wconditionally-supported
 CLANG_CXXFLAGS = ""
 UNKNOWN_CXXFLAGS = ""
-AM_CXXFLAGS = -Wall -Wextra -pedantic -fno-var-tracking -g \
-	-Wno-unknown-pragmas -Wshadow -Warray-bounds -Wcast-align \
+AM_CXXFLAGS = -Wall -Wno-unknown-pragmas -Wextra -pedantic \
+	-fno-var-tracking -g -Wshadow -Warray-bounds -Wcast-align \
 	-Wcast-qual $(am__append_1) $(CURL_CFLAGS) $(OPENSSL_CFLAGS) \
 	$(GTK_CFLAGS) $(WEBKIT2GTK_CFLAGS) $(ICU_CFLAGS) \
 	$(XML2_CFLAGS)
