Fixing some warnings
https://github.com/bibledit/cloud/issues/788

--- a/Makefile.am
+++ b/Makefile.am
@@ -590,11 +590,7 @@ generate_LDADD = libbibledit.a
 AM_CFLAGS = -Wall -Wno-unknown-pragmas -Wextra -pedantic -g
 AM_CFLAGS += $(OPENSSL_CFLAGS)
 
-GCC_CXXFLAGS = -Wcatch-value=2 -Wconditionally-supported
-CLANG_CXXFLAGS = ""
-UNKNOWN_CXXFLAGS = ""
-
-AM_CXXFLAGS = -Wall -Wno-unknown-pragmas -Wextra -pedantic -fno-var-tracking -g -Wshadow -Warray-bounds -Wcast-align -Wcast-qual
+AM_CXXFLAGS = -Wall -Wno-unknown-pragmas -Wextra -pedantic -fno-var-tracking -g -Wshadow -Warray-bounds -Wcast-align -Wcast-qual -Wconversion -Wctor-dtor-privacy
 if COMPILERGCC
 AM_CXXFLAGS += -Wcatch-value=2 -Wconditionally-supported
 endif
