--- a/Makefile.in
+++ b/Makefile.in
@@ -89,7 +89,7 @@ PRE_UNINSTALL = :
 POST_UNINSTALL = :
 build_triplet = @build@
 bin_PROGRAMS = server$(EXEEXT) unittest$(EXEEXT) generate$(EXEEXT)
-@COMPILERGCC_TRUE@am__append_1 = -Wcatch-value=2 -Wconditionally-supported
+@COMPILERGCC_TRUE@am__append_1 = -Wcatch-value=2 -Wconditionally-supported -Wduplicated-branches -Wduplicated-condim
 subdir = .
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/configure.ac
@@ -1576,9 +1576,10 @@ AM_CFLAGS = -Wall -Wno-unknown-pragmas -Wextra -pedantic -g \
 	$(OPENSSL_CFLAGS)
 AM_CXXFLAGS = -Wall -Wno-unknown-pragmas -Wextra -pedantic \
 	-fno-var-tracking -g -Wshadow -Warray-bounds -Wcast-align \
-	-Wcast-qual -Wconversion -Wctor-dtor-privacy $(am__append_1) \
-	$(CURL_CFLAGS) $(OPENSSL_CFLAGS) $(GTK_CFLAGS) \
-	$(WEBKIT2GTK_CFLAGS) $(ICU_CFLAGS) $(XML2_CFLAGS)
+	-Wcast-qual -Wconversion -Wctor-dtor-privacy \
+	-Wdelete-non-virtual-dtor $(am__append_1) $(CURL_CFLAGS) \
+	$(OPENSSL_CFLAGS) $(GTK_CFLAGS) $(WEBKIT2GTK_CFLAGS) \
+	$(ICU_CFLAGS) $(XML2_CFLAGS)
 
 # The core library compiles and embeds the mbedtls library.
 # On Debian this gives a lintian error:
