--- a/Makefile.in
+++ b/Makefile.in
@@ -89,7 +89,9 @@ PRE_UNINSTALL = :
 POST_UNINSTALL = :
 build_triplet = @build@
 bin_PROGRAMS = server$(EXEEXT) unittest$(EXEEXT) generate$(EXEEXT)
-@COMPILERGCC_TRUE@am__append_1 = -Wcatch-value=2 -Wconditionally-supported -Wduplicated-branches -Wduplicated-cond
+@COMPILERWARNINGS_TRUE@am__append_1 = -Wall -Wno-unknown-pragmas -Wextra -pedantic
+@COMPILERWARNINGS_TRUE@am__append_2 = -Wall -Wno-unknown-pragmas -Wextra -pedantic -Wshadow -Warray-bounds -Wcast-align -Wcast-qual -Wconversion -Wctor-dtor-privacy -Wdelete-non-virtual-dtor -Weffc++
+@COMPILERGCC_TRUE@@COMPILERWARNINGS_TRUE@am__append_3 = -Wcatch-value=2 -Wconditionally-supported -Wduplicated-branches -Wduplicated-cond
 subdir = .
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/configure.ac
@@ -1572,12 +1574,8 @@ generate_SOURCES = \
 	sources/styles.cpp
 
 generate_LDADD = libbibledit.a
-AM_CFLAGS = -Wall -Wno-unknown-pragmas -Wextra -pedantic -g \
-	$(OPENSSL_CFLAGS)
-AM_CXXFLAGS = -Wall -Wno-unknown-pragmas -Wextra -pedantic \
-	-fno-var-tracking -g -Wshadow -Warray-bounds -Wcast-align \
-	-Wcast-qual -Wconversion -Wctor-dtor-privacy \
-	-Wdelete-non-virtual-dtor -Weffc++ $(am__append_1) \
+AM_CFLAGS = -g $(OPENSSL_CFLAGS) $(am__append_1)
+AM_CXXFLAGS = -fno-var-tracking -g $(am__append_2) $(am__append_3) \
 	$(CURL_CFLAGS) $(OPENSSL_CFLAGS) $(GTK_CFLAGS) \
 	$(WEBKIT2GTK_CFLAGS) $(ICU_CFLAGS) $(XML2_CFLAGS)
 
