Fix special font in editors
https://github.com/bibledit/cloud/issues/785

--- a/configure.ac
+++ b/configure.ac
@@ -194,7 +194,7 @@ ENABLEIOS=yes
 ]
 )
 
-# Whether to enable compiler warnings. Todo
+# Whether to enable compiler warnings.
 ENABLEWARNINGS=no
 AC_ARG_ENABLE(warnings,
 [  --enable-warnings Enable compiler warnings],[ENABLEWARNINGS=yes])
