--- a/Makefile.am
+++ b/Makefile.am
@@ -593,9 +593,9 @@ AM_CFLAGS += $(OPENSSL_CFLAGS)
 AM_CXXFLAGS = -fno-var-tracking -g
 if COMPILERWARNINGS
 AM_CFLAGS += -Wall -Wno-unknown-pragmas -Wextra -pedantic
-AM_CXXFLAGS += -Wall -Wno-unknown-pragmas -Wextra -pedantic -Wshadow -Warray-bounds -Wcast-align -Wcast-qual -Wconversion -Wctor-dtor-privacy -Wdelete-non-virtual-dtor -Weffc++ -Wextra-semi -Wfloat-equal -Wformat=2 -Wformat-overflow=2 -Winline -Wlogical-op -Wmissing-declarations -Wmissing-include-dirs -Wmissing-noreturn
+AM_CXXFLAGS += -Wall -Wno-unknown-pragmas -Wextra -pedantic -Wshadow -Warray-bounds -Wcast-align -Wcast-qual -Wconversion -Wctor-dtor-privacy -Wdelete-non-virtual-dtor -Weffc++ -Wextra-semi -Wfloat-equal -Wformat=2 -Wmissing-include-dirs -Wmissing-noreturn -Wnull-dereference -Wold-style-cast
 if COMPILERGCC
-AM_CXXFLAGS += -Wcatch-value=2 -Wconditionally-supported -Wduplicated-branches -Wduplicated-cond
+AM_CXXFLAGS += -Wcatch-value=2 -Wconditionally-supported -Wduplicated-branches -Wduplicated-cond -Wformat-overflow=2 -Wlogical-op -Wnoexcept -Wno-non-template-friend
 endif
 endif
 if COMPILERCLANG
